another day another page

--- a/blob_count_fit.tex
+++ b/blob_count_fit.tex
@@ -20,7 +20,7 @@ ymajorgrids,
 ymin=6.26154869922026, ymax=9.1982215266363,
 ytick style={color=black}
 ]
-\addplot [draw=color0, fill=color0, forget plot, mark=*, only marks]
+\addplot [draw=color0, fill=color0, forget plot, mark=*, mark size=1, only marks, mark options={solid,fill opacity=0}]
 table{%
 x  y
 2.89713740402389e-08 8.85694575615902
