--- a/blob_count_curve.tex
+++ b/blob_count_curve.tex
@@ -22,7 +22,7 @@ ymin=99.9931235536055, ymax=9059.85673521721,
 ytick style={color=black},
 % y tick label style={/pgf/number format/sci}
 ]
-\addplot [draw=color0, fill=color0, forget plot, mark=*, only marks]
+\addplot [draw=color0, fill=color0, forget plot, mark=*, mark size=1, only marks, mark options={solid,fill opacity=0}]
 table{%
 x  y
 2.89713740402389e-08 7023
