--- a/biblio.bib
+++ b/biblio.bib
@@ -7,3 +7,78 @@
   number={},
   pages={1848-1857},
   doi={10.1109/IPDPSW.2012.228}}
+
+@article{Lindeberg2004FeatureDW,
+  title={Feature Detection with Automatic Scale Selection},
+  author={T. Lindeberg},
+  journal={International Journal of Computer Vision},
+  year={2004},
+  volume={30},
+  pages={79-116}
+}
+
+@article{duits2004axioms,
+  title={On the axioms of scale space theory},
+  author={Duits, Remco and Florack, Luc and De Graaf, Jan and ter Haar Romeny, Bart},
+  journal={Journal of Mathematical Imaging and Vision},
+  volume={20},
+  number={3},
+  pages={267--298},
+  year={2004},
+  publisher={Springer}
+}
+
+@article{koenderink1984structure,
+  title={The structure of images},
+  author={Koenderink, Jan J},
+  journal={Biological cybernetics},
+  volume={50},
+  number={5},
+  pages={363--370},
+  year={1984},
+  publisher={Springer}
+}
+
+@article{marr1980theory,
+  title={Theory of edge detection},
+  author={Marr, David and Hildreth, Ellen},
+  journal={Proceedings of the Royal Society of London. Series B. Biological Sciences},
+  volume={207},
+  number={1167},
+  pages={187--217},
+  year={1980},
+  publisher={The Royal Society London}
+}
+
+@article{derpanis2005gaussian,
+  title={The gaussian pyramid},
+  author={Derpanis, Konstantinos G},
+  year={2005},
+  publisher={Citeseer}
+}
+
+@INPROCEEDINGS {9307788,
+author = {M. Levental and R. Chard and J. A. Libera and K. Chard and A. Koripelly and J. R. Elias and M. Schwarting and B. Blaiszik and M. Stan and S. Chaudhuri and I. Foster},
+booktitle = {2020 IEEE/ACM 2nd Annual Workshop on Extreme-scale Experiment-in-the-Loop Computing (XLOOP)},
+title = {Towards Online Steering of Flame Spray Pyrolysis Nanoparticle Synthesis},
+year = {2020},
+volume = {},
+issn = {},
+pages = {35-40},
+keywords = {graphics processing units;dogs;convolution;kernel;fuels;fires;standards},
+doi = {10.1109/XLOOP51963.2020.00011},
+url = {https://doi.ieeecomputersociety.org/10.1109/XLOOP51963.2020.00011},
+publisher = {IEEE Computer Society},
+address = {Los Alamitos, CA, USA},
+month = {nov}
+}
+
+@misc{CUB,
+  author = {Duane Merrill},
+  title = {CUDA Unbound (CUB)},
+  year = {2021},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  howpublished = {\url{https://github.com/NVIDIA/cub}},
+  commit = {b229817e3963fc942c7cc2c61715a6b2b2c49bed}
+}
