done with my part

--- a/biblio.bib
+++ b/biblio.bib
@@ -82,3 +82,115 @@ month = {nov}
   howpublished = {\url{https://github.com/NVIDIA/cub}},
   commit = {b229817e3963fc942c7cc2c61715a6b2b2c49bed}
 }
+
+@ARTICLE{1095851,
+  author={P. {Burt} and E. {Adelson}},
+  journal={IEEE Transactions on Communications}, 
+  title={The Laplacian Pyramid as a Compact Image Code}, 
+  year={1983},
+  volume={31},
+  number={4},
+  pages={532-540},
+  doi={10.1109/TCOM.1983.1095851}}
+  
+ @manual{zeiss:multisem550,
+    organization  = "Carl Zeiss AG",
+    title         = "Dual Low Dropout Voltage Regulator",
+    number        = "TLE 4473 GV55-2",
+    year          =  2008,
+    month         =  10,
+    note          = "Rev. 1.2"
+}
+
+@article{YEO1993629,
+title = {Autofocusing for tissue microscopy},
+journal = {Image and Vision Computing},
+volume = {11},
+number = {10},
+pages = {629-639},
+year = {1993},
+issn = {0262-8856},
+doi = {https://doi.org/10.1016/0262-8856(93)90059-P},
+url = {https://www.sciencedirect.com/science/article/pii/026288569390059P},
+author = {TTE Yeo and SH Ong and  Jayasooriah and R Sinniah},
+keywords = {autofocus, focusing, microscopy, tissue sections},
+abstract = {This paper describes the implementation of autofocusing for tissue microscopy. We first investigate the suitability of several criterion functions for the evaluation of image sharpness. Since tissue sections are invariably stained, we also discuss the selection of the colour component on which autofocusing will be performed. In tissue microscopy, where a section generally comprises multiple layers, it is often not possible to obtain an image that is well focused over the field of view because of the limited depth of field of the objective. We describe focus enhancement algorithms, closely related to the autofocus system, which may be employed to obtain an entirely sharp image.}
+}
+
+@article{https://doi.org/10.1002/jbio.202000227,
+author = {Bian, Zichao and Guo, Chengfei and Jiang, Shaowei and Zhu, Jiakai and Wang, Ruihai and Song, Pengming and Zhang, Zibang and Hoshino, Kazunori and Zheng, Guoan},
+title = {Autofocusing technologies for whole slide imaging and automated microscopy},
+journal = {Journal of Biophotonics},
+volume = {13},
+number = {12},
+pages = {e202000227},
+keywords = {deep learning, digital pathology, focus map, focus quality, whole slide imaging},
+doi = {https://doi.org/10.1002/jbio.202000227},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/jbio.202000227},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/jbio.202000227},
+abstract = {Abstract Whole slide imaging (WSI) has moved digital pathology closer to diagnostic practice in recent years. Due to the inherent tissue topography variability, accurate autofocusing remains a critical challenge for WSI and automated microscopy systems. The traditional focus map surveying method is limited in its ability to acquire a high degree of focus points while still maintaining high throughput. Real-time approaches decouple image acquisition from focusing, thus allowing for rapid scanning while maintaining continuous accurate focus. This work reviews the traditional focus map approach and discusses the choice of focus measure for focal plane determination. It also discusses various real-time autofocusing approaches including reflective-based triangulation, confocal pinhole detection, low-coherence interferometry, tilted sensor approach, independent dual sensor scanning, beam splitter array, phase detection, dual-LED illumination and deep-learning approaches. The technical concepts, merits and limitations of these methods are explained and compared to those of a traditional WSI system. This review may provide new insights for the development of high-throughput automated microscopy imaging systems that can be made broadly available and utilizable without loss of capacity.},
+year = {2020}
+}
+
+@INPROCEEDINGS{1545017,
+author={ {Yu Sun} and S. {Duthaler} and B. J. {Nelson}},
+booktitle={2005 IEEE/RSJ International Conference on Intelligent Robots and Systems}, title={Autofocusing algorithm selection in computer microscopy},
+year={2005},
+volume={},
+number={},
+pages={70-76},
+doi={10.1109/IROS.2005.1545017}}
+
+@article{10.1117/1.JBO.17.3.036008,
+author = {Rafael Redondo and Gabriel Cristóbal and Gloria Bueno Garcia and Oscar Deniz and Jesus Salido and Maria del Milagro Fernandez and Juan Vidal and Juan Carlos Valdiviezo and Rodrigo Nava and Boris Escalante-Ramírez and Marcial Garcia-Rojo},
+title = {{Autofocus evaluation for brightfield microscopy pathology}},
+volume = {17},
+journal = {Journal of Biomedical Optics},
+number = {3},
+publisher = {SPIE},
+pages = {1 -- 9},
+keywords = {Microscopy, Pathology, Cell biology, Tissues, Biopsy, Breast, Image analysis, Lung, Computing systems, Image processing},
+year = {2012},
+doi = {10.1117/1.JBO.17.3.036008},
+URL = {https://doi.org/10.1117/1.JBO.17.3.036008}
+}
+
+
+
+
+
+
+
+
+
+@article{doi:10.1021/acsphotonics.0c01774,
+author = {Luo, Yilin and Huang, Luzhe and Rivenson, Yair and Ozcan, Aydogan},
+title = {Single-Shot Autofocusing of Microscopy Images Using Deep Learning},
+journal = {ACS Photonics},
+volume = {8},
+number = {2},
+pages = {625-638},
+year = {2021},
+doi = {10.1021/acsphotonics.0c01774},
+
+URL = { 
+        https://doi.org/10.1021/acsphotonics.0c01774
+    
+},
+eprint = { 
+        https://doi.org/10.1021/acsphotonics.0c01774
+    
+}
+
+}
+
+@INPROCEEDINGS{1699659,
+author={A. {Neubeck} and L. {Van Gool}},
+booktitle={18th International Conference on Pattern Recognition (ICPR'06)}, title={Efficient Non-Maximum Suppression},
+year={2006},
+volume={3},
+number={},
+pages={850-855},
+doi={10.1109/ICPR.2006.479}}
+
+
