done with my part

--- a/biblio.bib
+++ b/biblio.bib
@@ -95,11 +95,11 @@ month = {nov}
   
  @manual{zeiss:multisem550,
     organization  = "Carl Zeiss AG",
-    title         = "Dual Low Dropout Voltage Regulator",
-    number        = "TLE 4473 GV55-2",
-    year          =  2008,
+    title         = "ZEISS MultiSEM Research Partner Program",
+    number        = "Version 2.4",
+    year          =  2018,
     month         =  10,
-    note          = "Rev. 1.2"
+    note          = "The World’s Fastest Scanning Electron Microscopes"
 }
 
 @article{YEO1993629,
