Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -166,9 +166,12 @@ focus depths, section \ref{sec:related} discusses related work and
 how our work is distinct therefrom, and finally section \ref{sec:conclusion}
 concludes with a discussion of future research.
 
-\section{Gregg sells science!}
+\section{Significance to Neuroscience and Connectomics}
 
-TYPE HERE
+A fundamental goal of neuroscience is to map the anatomical wiring of the brain. Such an effort is difficult because currently electron microscopy, an imaging method traditionally limited to small 2D images, is the only imaging modality with sufficient resolution to directly visualize the connections, or synapses, between neurons. Recently, automated serial electron microscopy (‘connectomics’) has been developed where 1,000’s if not 10’s of thousands of individual 2D images are automatically acquired in series and then algorithmically aligned to produce a volumetric dataset. Such 3D datasets allow neuroscientists to follow the tortuous path neurons take through the brain to connect with each other. However, many of the steps to collecting 3D datasets for connectomics require manual inspection causing significant slowdowns in the rate in which datasets can be acquired. Such bottlenecks significantly impact the size of datasets that can be reasonably acquired and studied. Without high fidelity automation to the imaging pipeline, the field of connectomics will fail to advance and realize its full potential.
+
+One part of the imaging pipeline we sought to improve through automation is automatically ensuring that images acquired by the electron microscope are in-focus. and status of the microscope. While perhaps a small step in the process, focus detection it is nevertheless an extremely critical step. Without properly focused images, all downstream computational steps (i.e. 2D tile montaging, 3D alignment, automatic segmentation) will fail. Furthermore, because imaging sections requires loading and unloading sets of ~100-200 sections at a time, a failure manually flag an out of focus image in real time causes significant delays in having to reload the sample set, find the desired field of view, reacquire, and insert that new image into the image stack. Finally, advances in electron microscopes have pushed the rate that images can be acquired (e.g. ~10 Tbs/24hr) further necessitating the need for high throughput automation that ensures images are acquired in focus in order for downstream computational pipelines and ultimately analysis of biological results to keep pace with data acquisition. While many electron microscopes have built-in automatic focus algorithms that attempt to focus the microscope before image acquisition, blurry images still occur at about 1-10\% of the time depending on the quality of the tissue sections being imaged. Our proposed solution is to have a second pass analysis of the blurriness of the image after they are acquired using machine learning methods to flag images that failed to pass the initial autofocus step.  
+
 
 \section{Multi-scale Histologic Feature Detection\label{sec:mhd}}
 
